--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "pages": [
     "pages/location/index",
-    "pages/tools/index",
-    "pages/about/community",
     "pages/information/index",
-    "pages/tools/express",
+    "pages/community/index",
     "pages/activity/index",
-    "pages/tools/richText",
-    "pages/tools/children"
+    "pages/children/richText",
+    "pages/children/default",
+    "pages/children/map"
   ],
   "tabBar": {
     "selectedColor": "#2b91fd",
@@ -17,7 +16,7 @@
         "text": "便民信息"
       },
       {
-        "pagePath": "pages/about/community",
+        "pagePath": "pages/community/index",
         "text": "小区概况"
       }
     ]
@@ -28,8 +27,8 @@
     }
   },
   "networkTimeout": {
-    "request": 10000,
-    "downloadFile": 10000
+    "request": 60000,
+    "downloadFile": 60000
   },
   "debug": true,
   "window": {
